# aria

./: .gitignore  AGENTS.md  ARIA Codebase Audit.docx  ARIA Sprint Log.docx  CLAUDE.md  CONTRIBUTING.md  IMPROVEMENT_SCHEME.md  KNOWN_ISSUES.md  NAMING_AUDIT.md  README.md  README_PROTO.md  SOUL.md  agent.yaml  buf.gen.yaml  docker-compose.yml
backend/: .env.example  go.mod  go.sum  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: cognition_route.py  metrics_route.py  routes.py  tts_route.py  websocket.py
backend/app/cognition/: conflict.py  llm.py  memory.py  prompt.py
backend/app/memory/: graph_memory.py
backend/app/models/: schemas.py
backend/app/observability/: metrics.py
backend/app/pipeline/: audio.py  audio_worker.py  denoiser.py  emotion.py  gesture.py  gesture_classifier.py  transcriber.py  vad.py  vision.py  vision_grpc_server.py  vision_worker.py  voice_engine.py  whisper_coreml.py
backend/app/spatial/: anchor_registry.py  gesture_anchor_bridge.py
backend/benchmarks/: whisper_latency.json
backend/cmd/server/: main.go
backend/data/: anchors.db
backend/internal/audio/: worker.go  worker_test.go
backend/internal/cognition/: client.go  client_test.go  grpc_server.go  grpc_server_test.go  handler.go  handler_test.go  prompt.go  stream_registry.go
backend/internal/config/: config.go
backend/internal/memory/: working.go  working_test.go
backend/internal/nats/: publisher.go  subscriber.go  subscriber_test.go
backend/internal/server/: hub.go  messages.go  proxy_test.go  server.go  (+1 more)
backend/scripts/: audio_test.py  benchmark_nats.py  benchmark_whisper.py  convert_whisper_coreml.py  vision_preview.py
backend/tests/: test_anchor_routes.py  test_audio.py  test_cognition.py  test_gesture.py  test_gesture_anchor_bridge.py  test_gesture_classifier.py  test_graph_memory.py  test_llm_routing.py  test_memory.py  test_metrics.py  test_nats_transport.py  test_spatial_anchoring.py  test_two_hand_gestures.py  test_vision.py  test_vision_grpc_server.py  test_vision_interrupt.py  test_voice_engine.py  test_whisper_coreml.py
(+70 files in other folders)
