[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aria-backend"
version = "0.1.0"
description = "ARIA multimodal AGI avatar backend"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = ["gen"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
# E501: line-length handled by formatter
# N806: uppercase constants inside functions (WAKE_WORDS, SLEEP_PHRASES) are intentional
ignore = ["E501", "N806"]

[tool.ruff.lint.per-file-ignores]
# gRPC generated stubs use PascalCase method names per proto convention
"app/pipeline/vision_grpc_server.py" = ["N802"]
# NatsPublisher and queue are defined/imported inside try blocks; type annotations reference them
"app/pipeline/vision_worker.py" = ["F821"]
# VAD state machine: silence_ms/in_speech reassignments inside branch are intentional reset guards
"app/pipeline/audio_worker.py" = ["F841"]
# Scripts use deferred imports after warnings suppression (intentional E402)
"scripts/*" = ["E402", "F841"]
# Tests manipulate sys.path before importing generated proto stubs
"tests/test_nats_transport.py" = ["E402", "N802"]
"tests/test_spatial_anchoring.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
